syntax = "proto3";

package streaming;

option go_package = "pkg/streaming/proto";

message Event {
  int64 timestamp = 1;
  bytes payload = 2;
}

message AddRequest {
  string topic = 1;
  repeated bytes payloads = 2;
}

message AddResponse {
  // Empty response
}

message PollRequest {
  string topic = 1;
  int32 max_events = 2;
}

message PollResponse {
  repeated Event events = 1;
}

service EventService {
  rpc Add(AddRequest) returns (AddResponse);
  rpc Poll(PollRequest) returns (stream PollResponse);
}
